--- a/update-record-status.ipynb
+++ b/update-record-status.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# mashup script for batch changes\n",
     "from fulcrum import Fulcrum\n",
-    "import json, math, logging, requests, datetime,  timedelta\n",
+    "import json, logging, math, datetime,  timedelta\n",
     "logging.basicConfig(filename='status-update.log', level=logging.DEBUG) #optional logging to file"
    ]
   },
@@ -23,7 +23,6 @@
     "with open(\"/credentials.json\") as c:\n",
     "\tcredentials = json.load(c)\n",
     "\n",
-    "urlBase = credentials['fulcrum_url']\n",
     "fulcrum = Fulcrum(key=credentials['fulcrum_api'])\n",
     "recordsPerPage = 5000"
    ],
@@ -36,42 +35,16 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# fulcrum form\n",
-    "formID = \"0046e79b-ef91-4b37-99b9-d6340e28094c\"  #change this to the app you want to update\n",
-    "formdata = fulcrum.forms.find(formID)  # this creates list object that where you can look up the form elements and their ID's"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# fulcrum form\n",
-    "formID = \"0046e79b-ef91-4b37-99b9-d6340e28094c\"  #change this to the app you want to update\n",
-    "formdata = fulcrum.forms.find(\n",
-    "\tformID)  # this creates list object that where you can look up the form elements and their ID's\n",
-    "## get number of pages\n",
-    "### the following divides the total number of records in chunks and downloads and assembles them. Otherwise the fulcrum API allows only downloads of 20,000 records\n",
-    "recordsPerPage = 5000\n",
-    "\n",
     "## count records in app\n",
-    "recordCount = fulcrum.forms.find(formID)['form']['record_count']\n",
+    "recordCount = fulcrum.forms.find(credentials['form_id'])['form']['record_count']\n",
     "pages = math.ceil(recordCount / recordsPerPage)\n",
     "\n",
     "## get data per page\n",
-    "if pages > 1:\n",
-    "\tfor p in range(1, pages + 1):\n",
-    "\t\tdataPage = fulcrum.records.search(url_params={'form_id': formID, 'page': p, 'per_page': recordsPerPage})[\n",
-    "\t\t\t'records']\n",
-    "\t\tif p > 1:\n",
-    "\t\t\tdata.extend(dataPage)\n",
-    "\t\telse:\n",
-    "\t\t\tdata = dataPage\n",
-    "else:\n",
-    "\tdata = fulcrum.records.search(url_params={'form_id': formID, 'page': 1, 'per_page': recordsPerPage})['records']"
+    "data = []\n",
+    "for p in range(1, pages + 1):\n",
+    "  dataPage = fulcrum.records.search(\n",
+    "    url_params={'form_id': credentials['form_id'], 'page': p, 'per_page': 5000})['records']\n",
+    "  data.extend(dataPage)"
    ],
    "metadata": {
     "collapsed": false
